# BN_agent

./: .gitignore  Cargo.toml  README.md  TASKS.md  persona.md
.github/workflows/: ci.yml
bn-core/: .env  .gitignore  Cargo.toml  persona.md
bn-core/data/: chat_history.db
bn-core/src/: api.rs  core_loop.rs  logger.rs  main.rs  runtime.rs
bn-core/src/api_server/: mod.rs
bn-core/src/core/: loop.rs  mod.rs  runtime.rs
bn-core/src/llm/: client.rs  store.rs
bn-core/src/models/api_server/: mod.rs
bn-core/src/models/event_bus/: mod.rs
bn-core/src/models/llm/: client.rs  mod.rs  store.rs
bn-core/src/models/plugin_loader/: mod.rs
data/skills/: audio_tag_control.md  code_review.md  flowchart.md  image_generation.md  summarize_text.md  translate_to_en.md
docs/: agent-loop.md  claude-as-llm-backend.md  memory-message-format.md  memory-system-design.md  proactive-plugin.md
main-app/: .env.example  Cargo.toml  persona.md
main-app/src/: agent_loop_actor.rs  cancellation_actor.rs  chat_store.rs  claude_backend.rs  llm_actor.rs  main.rs  message_router.rs  metrics_actor.rs  pipeline.rs  plugin_manager.rs  plugin_tools.rs  rate_limit_actor.rs  retry_actor.rs  token_usage_actor.rs  tool_exec.rs
plugin-core/: Cargo.toml
plugin-core/src/: context.rs  error.rs  event.rs  lib.rs  plugin.rs  tool.rs
plugin-interface/: Cargo.toml
plugin-interface/src/: lib.rs
plugins/asr-tts-plugin/: Cargo.toml
plugins/asr-tts-plugin/src/: lib.rs
plugins/audio-capture-plugin/: Cargo.toml
plugins/audio-capture-plugin/src/: lib.rs
plugins/claude-bridge-plugin/: Cargo.toml
plugins/claude-bridge-plugin/src/: lib.rs
plugins/demo-plugin/: Cargo.toml
plugins/demo-plugin/src/: lib.rs
plugins/feishu-im-plugin/: Cargo.toml
plugins/feishu-im-plugin/src/: bot.rs  lib.rs
plugins/hello-plugin/: Cargo.toml
plugins/hello-plugin/src/: lib.rs
plugins/image-gen-plugin/: Cargo.toml
plugins/image-gen-plugin/src/: lib.rs
plugins/image-plugin/: Cargo.toml
plugins/image-plugin/src/: lib.rs
plugins/logger-plugin/: Cargo.toml
plugins/logger-plugin/src/: lib.rs
plugins/mcp-plugin/: Cargo.toml
plugins/mcp-plugin/src/: lib.rs
plugins/memory-plugin/: Cargo.toml
plugins/memory-plugin/src/: lib.rs
plugins/proactive-plugin/: Cargo.toml
plugins/proactive-plugin/src/: lib.rs
plugins/skill-plugin/: Cargo.toml
plugins/skill-plugin/src/: lib.rs
plugins/tg-im-plugin/: Cargo.toml  UNIT_TESTS.md
plugins/tg-im-plugin/src/: bot.rs  lib.rs
plugins/time-plugin/: Cargo.toml
plugins/time-plugin/src/: lib.rs
plugins/toy-control-plugin/: Cargo.toml
plugins/toy-control-plugin/src/: lib.rs
plugins/tui-plugin/: Cargo.toml
plugins/tui-plugin/src/: lib.rs
plugins/video-plugin/: Cargo.toml
plugins/video-plugin/src/: lib.rs
plugins/webrtc-plugin/: Cargo.toml
plugins/webrtc-plugin/src/: lib.rs  peer.rs  signaling.rs
plugins/wechat-claw-plugin/: Cargo.toml  TODO.md
plugins/wechat-claw-plugin/src/: bot.rs  client.rs  lib.rs  protocol.rs
plugins/wechat-claw-plugin/src/ilink_sdk/: client.rs  http_client.rs  mod.rs  types.rs  voice.rs
plugins/wechat-claw-plugin/src/ilink_sdk/auth/: credential.rs  mod.rs  qr_login.rs
plugins/wechat-claw-plugin/src/ilink_sdk/cdn/: aes_ecb.rs  download.rs  mod.rs  upload.rs
plugins/wechat-claw-plugin/src/ilink_sdk/messaging/: receive.rs  send.rs
plugins/wechat-claw-plugin/src/ilink_sdk/util/: media_type.rs
webrtc-client/: Cargo.toml  index.html
webrtc-client/src/: main.rs
