[workspace]
members = [
    "plugin-interface",
    "main-app",
    "plugins/demo-plugin",
    "plugins/logger-plugin",
    "plugins/time-plugin",
    "plugins/tg-im-plugin",
    "plugins/tui-plugin",
    "plugins/asr-tts-plugin",
    "plugins/feishu-im-plugin",
    "plugins/claude-bridge-plugin",
    "plugins/wechat-claw-plugin",
    "plugins/audio-capture-plugin",
    "plugins/webrtc-plugin",
    "plugins/image-plugin",
    "plugins/image-gen-plugin",
    "plugins/video-plugin",
    "plugins/mcp-plugin",
    "plugins/skill-plugin",
    "plugins/proactive-plugin",
    "plugins/memory-plugin",
    "plugins/toy-control-plugin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
