[package]
name = "bn-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
plugin-core = { path = "../plugin-core" }
libloading = "0.8"
actix = "0.11.0"
actix-rt = "2.2"
tokio = { version = "1", features = ["signal"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
