[package]
name = "main-app"
version = "0.1.0"
edition = "2021"
description = "Main application — plugin manager with actix-web HTTP API"

[dependencies]
plugin-interface = { path = "../plugin-interface" }
actix = "0.13"
actix-rt = "2.9"
actix-web = "4"
dotenvy = "0.15"
libloading = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
futures-executor = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time", "sync", "process", "io-util"] }
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
log = "0.4"
fern = "0.7.1"
