[package]
name = "plugin-interface"
version = "0.1.0"
edition = "2021"
description = "Shared interface library for the actix actor plugin system"

[dependencies]
actix = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
parking_lot = "0.12"

[dev-dependencies]
actix-rt = "2.9"
