[package]
name = "asr-tts-plugin"
version = "0.1.0"
edition = "2021"
description = "ASR (speech-to-text) + TTS (text-to-speech) plugin using MiMo Chat API"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
log = "0.4"
rand = "0.8"
csv = "1"
