[package]
name = "claude-bridge-plugin"
version = "0.2.0"
edition = "2021"
description = "Claude CLI bridge — 可作为 LLM 后端或工具"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
actix = "0.13"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt"] }
serde_json = "1"
log = "0.4"
