[package]
name = "feishu-im-plugin"
version = "0.1.0"
edition = "2021"
description = "Feishu (Lark) IM bridge plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
