[package]
name = "image-plugin"
version = "0.1.0"
edition = "2021"
description = "图片处理插件 — 缩放、格式转换、特效等"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
serde_json = "1"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
base64 = "0.22"
