[package]
name = "mcp-plugin"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) — connects to external MCP servers and exposes their tools"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
