[package]
name = "memory-plugin"
version = "0.1.0"
edition = "2021"
description = "Extracts long-term memories from conversations and injects them into LLM context via [记忆] snapshot"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
chrono = "0.4"
actix = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt"] }
