[package]
name = "proactive-plugin"
version = "0.1.0"
edition = "2021"
description = "主动插件 — 用户沉默时主动追问，支持全自动/半自动模式"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["time", "rt"] }
actix = "0.13"
