[package]
name = "proactive-plugin"
version = "0.1.0"
edition = "2021"
description = "Example plugin skeleton — subscribes to 'proactive.ping' and publishes 'proactive.pong'"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
serde_json = "1"
log = "0.4"
