[package]
name = "skill-plugin"
version = "0.1.0"
edition = "2021"
description = "Skill Plugin — loads Markdown skills as callable tools for the LLM"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"
