[package]
name = "tg-im-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-core = { path = "../../plugin-core" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "socks"] }
teloxide = { version = "0.13", default-features = false, features = ["rustls", "ctrlc_handler"] }
base64 = "0.22"
