[package]
name = "tg-im-plugin"
version = "0.1.0"
edition = "2021"
description = "Telegram IM plugin — bridges TG messages into the actix-actor event system"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
teloxide = { version = "0.13", default-features = false, features = ["rustls", "ctrlc_handler"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
log = "0.4"
base64 = "0.22"
