[package]
name = "toy-control-plugin"
version = "0.1.0"
edition = "2021"
description = "Remote control sex toy plugin with web UI — vibrate, location select, pattern control"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
actix-web = "4"
tokio = { version = "1", features = ["rt", "sync"] }
