[package]
name = "video-plugin"
version = "0.1.0"
edition = "2021"
description = "Video understanding plugin — uses MiMo API for video analysis"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1"
log = "0.4"
base64 = "0.22"
csv = "1"
