[package]
name = "wechat-claw-plugin"
version = "0.1.0"
edition = "2021"
description = "WeChat ClawBot / iLink API integration plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
log = "0.4"
rand = "0.8"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = "0.25"
