[package]
name = "wechat-claw-plugin"
version = "0.2.0"
edition = "2024"
description = "WeChat ClawBot / iLink API integration plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin-interface = { path = "../../plugin-interface" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
log = "0.4"
base64 = "0.22"
futures-util = "0.3"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = "0.25"
http = "1"
url = "2"
rand = "0.10"
md-5 = "0.10"
aes = "0.8"
ecb = { version = "0.1", features = ["alloc"] }
cipher = { version = "0.5", features = ["block-padding"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
urlencoding = "2"
parking_lot = "0.12"
silk-codec = { version = "0.1.0", optional = true }

[features]
default = []
voice = ["silk-codec"]

[dev-dependencies]
tempfile = "3"
